shopjuice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: juiceshop
  template:
    metadata:
      labels:
        app: juiceshop
    spec:
      containers:
      - name: juiceshop
        image: 1houssem/juiceshop:latest
        ports:
        - containerPort: 3000
