shopjuice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopjuice-service
spec:
  type: LoadBalancer  #NodePort
  selector:
    app: juiceshop
  ports:
  - port: 80
    targetPort: 3000
#    nodePort: 30090
